# digisim

./: Cargo.toml
.github/workflows/: rust.yml
benches/: circuit_bench.rs
game/: Cargo.toml  main.rs
src/: circuit.rs  circuit_builder.rs  circuit_fast.rs  circuit_naive.rs  circuit_sim.rs  lib.rs  main.rs
src/components/: adder.rs  memory.rs  mod.rs  mux.rs  wire.rs
tests/: circuit_test.rs
