[package]
name = "transist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_rapier3d = "0.16.2"
criterion = "0.4.0"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"

[[bench]]
name = "circuit_bench"
harness = false