[workspace]

members = [
    "game",
]

[package]
name = "digisim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
num-traits = "0.2.15"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"

[[bench]]
name = "circuit_bench"
harness = false

[profile.profile]
inherits = "bench"
debug = true
