[package]
name = "transist"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "transist"
path = "main.rs"

[dependencies]
digisim = { path = ".." }
bevy = "0.8.1"
bevy_rapier3d = "0.16.2"
rand = "0.8.5"
